# Shaggy

./: CMakeLists.txt  Shaggy.cbp
cmake/: FindGLM.cmake  FindSDL2.cmake
shaders/: basic.vert.glsl
src/: khash.h  linmath.h  main.c  shaders.h
src/sclog4c/: sclog4c.h
